# socialapp/openapi.yaml
@@ -34,7 +34,7 @@ security:
   - OAuth2: []
 
 paths:
-  /users:
+  /v1/users:
     get:
       description: List all users in the system (paginated)
       operationId: listUsers
@@ -120,7 +120,7 @@ paths:
       summary: Create user
       tags:
         - User
-  /password:
+  /v1/password:
     post:
       description: Change the password of the current user
       operationId: changePassword
@@ -191,7 +191,7 @@ paths:
       summary: Reset password
       tags:
         - User
-  /users/{username}/feed:
+  /v1/users/{username}/feed:
     get:
       description: Returns a users feed
       operationId: getUserFeed
@@ -232,7 +232,7 @@ paths:
       summary: Returns a users feed
       tags:
         - Comment
-  /users/{username}/comments:
+  /v1/users/{username}/comments:
     get:
       description: Gets all comments for a user
       operationId: getUserComments
@@ -299,7 +299,7 @@ paths:
       tags:
         - User
         - Comment
-  /users/{username}/followers:
+  /v1/users/{username}/followers:
     get:
       description: Get all followers for a user
       operationId: getUserFollowers
@@ -341,7 +341,7 @@ paths:
       tags:
         - User
         - Following
-  /users/{username}/following:
+  /v1/users/{username}/following:
     get:
       description: Get all followed users for a user (users that the user is following)
       operationId: getFollowingUsers
@@ -382,7 +382,7 @@ paths:
       summary: Get all followed users for a user
       tags:
         - User
-  /users/{followedUsername}/followers/{followerUsername}:
+  /v1/users/{followedUsername}/followers/{followerUsername}:
     delete:
       description: Remove a user as a follower of another user
       operationId: unfollowUser
@@ -469,7 +469,7 @@ paths:
       summary: Add a user as a follower
       tags:
         - User
-  /users/{username}:
+  /v1/users/{username}:
     delete:
       description: Deletes a particular user by username
       operationId: deleteUser
@@ -598,7 +598,7 @@ paths:
       summary: Update a user
       tags:
         - User
-  /users/{username}/roles:
+  /v1/users/{username}/roles:
     get:
       description: Get all roles for a user
       operationId: getRolesForUser
@@ -693,7 +693,7 @@ paths:
       tags:
         - User
 
-  /comments/{id}:
+  /v1/comments/{id}:
     get:
       description: Returns details about a particular comment
       operationId: getComment
@@ -740,7 +740,7 @@ paths:
       summary: Returns details about a particular comment
       tags:
         - Comment
-  /comments:
+  /v1/comments:
     post:
       description: Create a new comment
       operationId: createComment
@@ -776,7 +776,7 @@ paths:
       summary: Create a new comment
       tags:
         - Comment
-  /oauth/token:
+  /v1/oauth/token:
     post:
       description: Get an access token
       operationId: getAccessToken
@@ -804,7 +804,7 @@ paths:
       summary: Get an access token
       tags:
         - Authentication
-  /roles:
+  /v1/roles:
     get:
       description: Returns a list of roles
       operationId: listRoles
@@ -892,7 +892,7 @@ paths:
       summary: Create a new role
       tags:
         - Role
-  /roles/{id}:
+  /v1/roles/{id}:
     get:
       description: Returns a role
       operationId: getRole
@@ -1009,7 +1009,7 @@ paths:
       summary: Delete a role
       tags:
         - Role
-  /roles/{id}/scopes:
+  /v1/roles/{id}/scopes:
     get:
       description: Returns a list of scopes for a role
       operationId: listScopesForRole
@@ -1129,7 +1129,7 @@ paths:
       summary: Add a scope to a role
       tags:
         - Role
-  /roles/{role_id}/scopes/{scope_id}:
+  /v1/roles/{role_id}/scopes/{scope_id}:
     delete:
       description: Remove a scope from a role
       operationId: removeScopeFromRole
@@ -1185,7 +1185,7 @@ paths:
       summary: Remove a scope from a role
       tags:
         - Role
-  /scopes:
+  /v1/scopes:
     get:
       description: Returns a list of scopes
       operationId: listScopes
@@ -1273,7 +1273,7 @@ paths:
       summary: Create a new scope
       tags:
         - Scope
-  /scopes/{id}:
+  /v1/scopes/{id}:
     get:
       description: Returns a scope
       operationId: getScope
@@ -1390,7 +1390,7 @@ paths:
       summary: Delete a scope
       tags:
         - Scope
-  /urls/{alias}:
+  /v1/urls/{alias}:
     get:
       summary: Get a url
       description: Returns a url
@@ -1450,7 +1450,7 @@ paths:
             - shortly.url.delete
       tags:
         - URL
-  /urls/{alias}/data:
+  /v1/urls/{alias}/data:
     get:
       summary: Returns a url metadata
       description: Returns a url
@@ -1480,7 +1480,7 @@ paths:
           description: Url not found
       tags:
         - URL
-  /urls:
+  /v1/urls:
     post:
       summary: Create a new url
       description: Returns a url
@@ -1758,5 +1758,5 @@ components:
             shortly.url.create: Create a url
             shortly.url.update: Update a url
             shortly.url.delete: Delete a url
-          tokenUrl: /oauth/token
+          tokenUrl: /v1/oauth/token
       type: oauth2
